--- a/index.html
+++ b/index.html
@@ -183,7 +183,12 @@
               
             <div class="header-div">
                 <h2>Het Goedkoopste Bier</h2>
-                <p>Prijzen zijn per liter en exclusief statiegeld!<br><a href="#" onclick="alert('Prijzen worden elke dag bijgewerkt.\nSuggesties voor nieuwe features zijn welkom!\nEmail: hetgoedkoopstebier@outlook.com'); return false;" target="_blank">Meer info</a></p>
+                <p>Prijzen zijn per liter en excl. statiegeld! <a href="#" onclick="alert('Prijzen worden elke dag bijgewerkt.\nSuggesties voor nieuwe features zijn welkom!\nEmail: hetgoedkoopstebier@outlook.com'); return false;" target="_blank">Meer info</a></p>
+                <form action="https://www.paypal.com/donate" method="post" target="_top">
+                    <input type="hidden" name="hosted_button_id" value="ZBNXKPDLHQWJ8" />
+                    <input type="image" src="img/Paypal.png" style="width: 150px; height auto" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                    <img alt="" border="0" src="https://www.paypal.com/en_NL/i/scr/pixel.gif" width="1" height="1" />
+                </form>
             </div>
             
             <div class="filter-div">
